# job-hunter

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/: daily.yml
.github/workflows/: daily.yml
config/: companies.yml  prefs.yml
job_hunter/: __init__.py  config.py  main.py  models.py  resolve_board.py  run_scrape.py
job_hunter/matching/: embed_jobs.py  job_agent.py  job_requirements.py  rank.py  requirement_agent.py  resume_agent.py  seniority_agent.py
job_hunter/reports/: cli_match.py
job_hunter/resume/: __init__.py  embed_resume.py  pdf_to_text.py  resume.txt
job_hunter/scrapers/: __init__.py  bamboo.py  generic_json.py  greenhouse.py  html_jsonId.py  lever.py  linkedin_guest.py  recruitee.py  rss.py  teamtailor.py  workable.py
job_hunter/scrapers/search/: multi.py
job_hunter/storage/: __init__.py  db.py  job_embeddings.py  jobs.py
job_hunter/utils/: hash.py
tests/: __init__.py  test_greenhouse.py  test_matching.py  test_trivial.py
